It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Sat, Mar 7, 2009
---------------------------------------------------------------------
- Moved context code to module and made it available to controllers and views.

Fri, Mar 6, 2009
---------------------------------------------------------------------
- Implemented [Edit Account] form.
- Implemented basic functions of [Edit Campaign].

Thu, Mar 5, 2009
---------------------------------------------------------------------
- Moved some JavaScript code from helpers to application.js.
- Added support for showing interchangeable inline forms (Convert and Edit).
- Refactored saving/restoring context for inline forms.

Wed, Mar 4, 2009
---------------------------------------------------------------------
- Refactored tools menu in lists to use block div.
- Refactored lead conversion to use remote form.
- Started with the [Edit Lead] inline form.

Tue, Mar 3, 2009
---------------------------------------------------------------------
- Refactored lead star rating to always show 5 stars (grayed out or not).
- Removed [notes] field from core models and forms.
- Created v0.1 "Steinitz" milestone and tickets for "Steinitz" release.
- Set up GitHub service hook to integrate commits with the Lighthouse.

Mon, Mar 2, 2009
---------------------------------------------------------------------
- Implemented Lead and Contact summary sidebar for individual Leads and Contacts.

Sun, Mar 1, 2009
---------------------------------------------------------------------
- Added core extension library.
- Implemented Opportunity summary sidebar for individual Opportunity.

Sat, Feb 28, 2009
---------------------------------------------------------------------
- Added gravatar support for leads and contacts.

Fri, Feb 27, 2009
---------------------------------------------------------------------