@@ -1,5 +1,4 @@
 - remote_form_for(@account) do |f|
-  = hidden_field_tag "context", "#{@context}"
   = hidden_field_tag "account[user_id]", @current_user.id
   = f.error_messages
   = render :partial => "accounts/top_section",  :locals => { :f => f }
@@ -8,5 +7,5 @@
   .buttonbar
     = f.submit "Create Account" 
     or 
-    = link_to_remote "Cancel", { :url => new_account_path, :with => "{ visible: true, context: '#{@context}' }" }
+    = link_to_remote "Cancel", { :url => new_account_path, :with => "{ cancel: true }" }
     
