@@ -1,11 +1,11 @@
 if @account.valid?
-  page["#{@context}_arrow"].replace_html "&#9658;"
-  page["#{@context}_title"].replace_html "Accounts"
-  page << "Effect.toggle('#{@context}', 'blind', { duration: 0.1 });"
+  page[:create_account_arrow].replace_html "&#9658;"
+  page[:create_account_title].replace_html "Accounts"
+  page << "Effect.toggle('create_account', 'blind', { duration: 0.1 });"
   page.insert_html :top, :accounts, :partial => "account", :collection => [ @account ]
   page[dom_id(@account)].visual_effect :highlight, :duration => 1.5
 else
-  page[@context].replace_html :partial => "create"
-  page[@context].visual_effect :shake, :duration => 0.25, :distance => 6
+  page[:create_account].replace_html :partial => "create"
+  page[:create_account].visual_effect :shake, :duration => 0.25, :distance => 6
   page[:account_name].focus
 end
