@@ -1,10 +1,10 @@
-if params[:visible] == "false"                          # show
-  page["#{@context}_arrow"].replace_html "&#9660;"
-  page["#{@context}_title"].replace_html "Create Account"
-  page[@context].replace_html :partial => "create"
-  page << "Effect.toggle('#{@context}', 'blind', { duration: 0.25, afterFinish: function() { $('account_name').focus(); } });"
+if params[:cancel] != "true"
+  page[:create_account_arrow].replace_html "&#9660;"
+  page[:create_account_title].replace_html "Create Account"
+  page[:create_account].replace_html :partial => "create"
+  page << "Effect.toggle('create_account', 'blind', { duration: 0.25, afterFinish: function() { $('account_name').focus(); } });"
 else                                                    # hide
-  page["#{@context}_arrow"].replace_html "&#9658;"
-  page["#{@context}_title"].replace_html "Accounts"
-  page << "Effect.toggle('#{@context}', 'blind', { duration: 0.25 });"
+  page[:create_account_arrow].replace_html "&#9658;"
+  page[:create_account_title].replace_html "Accounts"
+  page << "Effect.toggle('create_account', 'blind', { duration: 0.25 });"
 end
