@@ -11,7 +11,8 @@
   .buttonbar
     = f.submit "Create Contact", :onclick => %/$("contact_assigned_to").value = $F("account_assigned_to")/
     or
-    = link_to_remote "Cancel", { :url => new_contact_path, :with => "{ visible: true, context: '#{@context}' }" }
+    = link_to_remote("Cancel", :url => new_contact_path, :with => "{ cancel: true }")
 
+- logger.p @account.inspect
 %script{:type => "text/javascript"}
   = @account.id.blank? ? "crm.create_account();" : "crm.select_account();"
