@@ -1,11 +1,11 @@
 if @contact.valid?
-  page["#{@context}_arrow"].replace_html "&#9658;"
-  page["#{@context}_title"].replace_html "Contacts"
-  page << "Effect.toggle('#{@context}', 'blind', { duration: 0.1 });"
+  page[:create_contact_arrow].replace_html "&#9658;"
+  page[:create_contact_title].replace_html "Contacts"
+  page << "Effect.toggle('create_contact', 'blind', { duration: 0.1 });"
   page.insert_html :top, :contacts, :partial => "contact", :collection => [ @contact ]
   page[dom_id(@contact)].visual_effect :highlight, :duration => 1.5
 else
-  page[@context].replace_html :partial => "create"
-  page[@context].visual_effect :shake, :duration => 0.25, :distance => 6
+  page[:create_contact].replace_html :partial => "create"
+  page[:create_contact].visual_effect :shake, :duration => 0.25, :distance => 6
   page[:contact_first_name].focus
 end
