@@ -7,7 +7,7 @@ end
 id = dom_id(@contact)
 if params[:cancel].blank?
   page.call "crm.hide_form", :create_contact      # Hide [Create Contact] for if it's up to avoid name clashes.
-  drop_context(:create_campaign)                  # Drop context so that refresh won't show [Create Contact] again.
+  drop_context(:create_contact)                   # Drop context so that refresh won't show [Create Contact] again.
   page.call "crm.highlight_off", id               # Disable onMouseOver for the list item.
   page[id].replace_html :partial => "edit"        # Show [Edit Contact] form.
 
