@@ -1,10 +1,10 @@
-if params[:visible] == "false"                          # show
-  page["#{@context}_arrow"].replace_html "&#9660;"
-  page["#{@context}_title"].replace_html "Create Contact"
-  page[@context].replace_html :partial => "create"
-  page << "Effect.toggle('#{@context}', 'blind', { duration: 0.25, afterFinish: function() { $('contact_first_name').focus(); } });"
+if params[:cancel] != "true"
+  page[:create_contact_arrow].replace_html "&#9660;"
+  page[:create_contact_title].replace_html "Create Contact"
+  page[:create_contact].replace_html :partial => "create"
+  page << "Effect.toggle('create_contact', 'blind', { duration: 0.25, afterFinish: function() { $('contact_first_name').focus(); } });"
 else                                                    # hide
-  page["#{@context}_arrow"].replace_html "&#9658;"
-  page["#{@context}_title"].replace_html "Contacts"
-  page << "Effect.toggle('#{@context}', 'blind', { duration: 0.25 });"
+  page[:create_contact_arrow].replace_html "&#9658;"
+  page[:create_contact_title].replace_html "Contacts"
+  page << "Effect.toggle('create_contact', 'blind', { duration: 0.25 });"
 end
